--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -46,13 +46,13 @@
     <section class="page-header">
       <h1 class="project-name">igniCMS</h1>
       <h2 class="project-tagline">Lightwaight CMS developed by developers for developers</h2>
+      {% if site.show_downloads %}
+        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+      {% endif %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+        <a href="https://ignicms.com/" class="btn">Back to Product Site</a>
     </section>
 
     <section class="main-content">
