Fix typo in default.html

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -45,7 +45,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">igniCMS</h1>
-      <h2 class="project-tagline">Lightwaight CMS developed by developers for developers</h2>
+      <h2 class="project-tagline">Lightweight CMS developed by developers for developers</h2>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
       {% endif %}
