Add many to many select

--- a/resources/assets/admin/sass/_form.scss
+++ b/resources/assets/admin/sass/_form.scss
@@ -41,4 +41,7 @@
       display: inline;
     }
   }
+  .select2-container--default .select2-selection--multiple .select2-selection__choice {
+      color: $text-color-dark;
+  }
 }
