updates to the documentation

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,7 +47,7 @@
       <h1 class="project-name">igniCMS</h1>
       <h2 class="project-tagline">Lightweight CMS developed by developers for developers</h2>
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+        <a href="https://github.com/despark/igni-core/releases/latest" class="btn">Latest Release</a>
       {% endif %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
